--- a/index.html
+++ b/index.html
@@ -10,8 +10,28 @@
     </head>
 
     <body>
+        <div class="pagina">
+            <div class="cabecalho">
+                <img src="./imagens/logomarca.png" class="logo">
+                <ion-icon name="people" class="icone-pessoas"></ion-icon>
+            </div>
 
+            <ul class="campo-de-mensagens">
+                <li>teste</li>
+                <li>teste</li>
+                <li>teste</li>
+            </ul>
+
+            <div class="digitar">
+                <h1>Escreva aqui...</h1>
+                <ion-icon name="paper-plane-outline" class="aviao"></ion-icon>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+        <script src="./script.js"></script>
     </body>
 
-    <script src="./script.js"></script>
+    
 </html>
