projeto final versão 1.0

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </ul>
 
             <div class="digitar">
-                <h1>Escreva aqui...</h1>
-                <ion-icon name="paper-plane-outline" class="aviao"></ion-icon>
+                <input type="text" placeholder="Escreva aqui..." class="escreva-aqui">
+                <ion-icon name="paper-plane-outline" class="aviao" onclick="enviarMsg()"></ion-icon>
             </div>
         </div>
 
